--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; TechIT 2016
                     </div>
                 </div>
             </div>
