--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
                         <p>52 Yale Avenue
-                            <br>Jersey City, NJ 07304</p>
+                            <br>Jersey City, NJ 07304
+                            <br>201-204-8791</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
