--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
                         <h3>Location</h3>
                         <p>52 Yale Avenue
                             <br>Jersey City, NJ 07304
-                            <br>201-204-8791</p>
+                            <br>201-204-8791
+                            <br><a href="techitoffice@gmail.com">TechIToffice@gmail.com</a></p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
