--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <p>52 Yale Avenue
                             <br>Jersey City, NJ 07304
                             <br>201-204-8791
-                            <br><a href="techitoffice@gmail.com">TechIToffice@gmail.com</a></p>
+                            <br><a href="mailto:techitoffice@gmail.com">TechIToffice@gmail.com</a></p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
