--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Products</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">Testimonials</a>
