--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Products</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -304,7 +304,7 @@
                             <h2>Department Automation</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Contact us for a consulatation. Automation has beeen a trending one-time service in processing and computer laden industries to increase productivity and reduce employee time spent on monotonous, repetitive and simple processing services. We go through analysis, development, and testing procedures to ensure your processing is efficient, quick, and easy to monitor. Savings can range anywhere from 35k to 300k a year. </p>
+                            <p><a href="mailto:techitoffice@gmail.com">Contact us</a> for a consulatation. Automation has beeen a trending one-time service in processing and computer laden industries to increase productivity and reduce employee time spent on monotonous, repetitive and simple processing services. We go through analysis, development, and testing procedures to ensure your processing is efficient, quick, and easy to monitor. Savings can range anywhere from 35k to 300k a year. </p>
                             <ul class="list-inline item-details">
                                 <li>Clients:
                                     <strong><a href="www.isaacmorris.com/">Isaac Morris</a>  <a href="www.academyfurnitureandsupplies.com//">Academy Furniture And Supplies</a>
@@ -367,10 +367,11 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>General IT services</h2>
+                            <h2>Solar Installers</h2>
+                            Come over to the green side of technology. Solar power is one of the many ways to ensure a benevolent future to your heirs - and to your wallet. <a href="mailto:techitoffice@gmail.com">Contact us</a> and express your concern on saving on your electric bills. Solar is here to help you, and we are here to help you through the process.
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Computer not responding? WiFi or networking issues? Internet too slow or keeps dropping? Does your phone always need more space or a cleanup? Can't figure  out what the problem is but you're sure a technician would know how to fix it? We can take care of you.</p>
+                            <p></p>
                             <ul class="list-inline item-details">
                                 <!-- <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -481,7 +482,7 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Computer not responding? WiFi or networking issues? Internet too slow or keeps dropping? Does your phone always need more space or a cleanup? Can't figure  out what the problem is but you're sure a technician would know how to fix it? We can take care of you. <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
