add bitcoin address qrc

--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
                             <li>
                                 <a href="https://www.linkedin.com/in/vedabrat-etwaru-44b0a64b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
-                            <!-- <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li> -->
+                            <li>
+                                <a href="" class="btn-social btn-outline"> <img src="img/portfolio/bitcoin.png" class="img-responsive" alt=""><i class="fa fa-fw fa-coinbase"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
