--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                 <a href="https://www.linkedin.com/in/vedabrat-etwaru-44b0a64b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social"> <img src="img/portfolio/bitcoin.png" alt=""><i class="fa fa-fw fa-coinbase"></i></a>
+                                <a href="#" class="btn-social"> <img src="img/portfolio/bitcoin.png" alt=""><i class=fa fa-fw fa-coinbase" class="img-responsive"></i></a>
                             </li>
                         </ul>
                     </div>
