--- a/index.html
+++ b/index.html
@@ -258,12 +258,7 @@
                             <li>
                                 <a href="https://www.linkedin.com/in/vedabrat-etwaru-44b0a64b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
-                            <li>
-<<<<<<< HEAD
-                                <a href="" class="btn-social btn-outline"> <img src="img/portfolio/bitcoin.png" class="img-responsive" alt=""><i class="fa fa-fw"></i></a>
-=======
-                                <a href="#" class="btn-social"> <img src="img/portfolio/bitcoin.png" alt=""><i class=fa fa-fw fa-coinbase" class="img-responsive"></i></a>
->>>>>>> refs/remotes/origin/master
+                            <li><a href="#" class="btn-social"><i class=fa fa-fw fa-coinbase" src="img/portfolio/bitcoin.png" class="img-responsive"></i></a>
                             </li>
                         </ul>
                     </div>
