--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <li>
                                 <a href="https://www.linkedin.com/in/vedabrat-etwaru-44b0a64b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
-                            <li><a href="#" class="btn-social"><i class=fa fa-fw fa-coinbase" src="img/portfolio/bitcoin.png" class="img-responsive"></i></a>
+                            <li><a href="img/portfolio/bitcoin.png" class="btn-social"><i class=fa fa-fw fa-coinbase" src="img/portfolio/bitcoin.png" class="img-responsive"></i></a>
                             </li>
                         </ul>
                     </div>
