--- a/index.html
+++ b/index.html
@@ -258,12 +258,14 @@
                             <li>
                                 <a href="https://www.linkedin.com/in/vedabrat-etwaru-44b0a64b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
-                            <li><a href="img/portfolio/bitcoin.png" class="btn-social"><i class=fa fa-fw fa-coinbase" src="img/portfolio/bitcoin.png" class="img-responsive"></i></a>
+                            <li><a href="img/portfolio/bitcoin.png" alt="Submit payments through bitcoin!" class="btn-social"><i class=fa fa-fw fa-coinbase" src="img/portfolio/bitcoin.png" class="img-responsive"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
+                        <h3><a href="pricing.html">Pricing</a>
                         <h3>About TechIT</h3>
+
                         <p>TechIT is your one stop for all technician issues, from corporate to personal.</p>
                     </div>
                 </div>
@@ -367,10 +369,9 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Solar Installers</h2>
-                            Come over to the green side of technology. Solar power is one of the many ways to ensure a benevolent future to your heirs - and to your wallet. <a href="mailto:techitoffice@gmail.com">Contact us</a> and express your concern on saving on your electric bills. Solar is here to help you, and we are here to help you through the process.
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p></p>
+                            <p>Come over to the green side of technology. Solar power is one of the many ways to ensure a benevolent future to your heirs - and to your wallet. <a href="mailto:techitoffice@gmail.com">Contact us</a> and express your concern on saving on your electric bills. Solar is here to help you, and we are here to help you through the process.</p>
                             <ul class="list-inline item-details">
                                 <!-- <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
