--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Us </h2>
+                    <h2><a href="mailto:techitoffice@gmail.com">Contact us</a></h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -190,7 +190,7 @@
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
+                        <!-- <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
                                 <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
@@ -224,7 +224,7 @@
                             <div class="form-group col-xs-12">
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
                             </div>
-                        </div>
+                        </div> -->
                     </form>
                 </div>
             </div>
@@ -258,7 +258,7 @@
                             <li>
                                 <a href="https://www.linkedin.com/in/vedabrat-etwaru-44b0a64b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
-                            <li><a href="img/portfolio/bitcoin.png" alt="Submit payments through bitcoin!" class="btn-social"><i class=fa fa-fw fa-coinbase" src="img/portfolio/bitcoin.png" class="img-responsive"></i></a>
+                            <li><a href="img/portfolio/bitcoin.png" alt="Submit payments through bitcoin!" class="btn-social"><i class=fa fa-fw fa-bitcoin" src="img/portfolio/bitcoin.png" class="img-responsive"></i></a>
                             </li>
                         </ul>
                     </div>
