--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             <h2>Department Automation</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p><a href="mailto:techitoffice@gmail.com">Contact us</a> for a consulatation. Automation has beeen a trending one-time service in processing and computer laden industries to increase productivity and reduce employee time spent on monotonous, repetitive and simple processing services. We go through analysis, development, and testing procedures to ensure your processing is efficient, quick, and easy to monitor. Savings can range anywhere from 35k to 300k a year. </p>
+                            <p><a href="mailto:techitoffice@gmail.com">Contact us</a> for a consulatation. Automation has been a trending one-time service in processing and computer laden industries to increase productivity and reduce employee time spent on monotonous, repetitive and simple processing services. We go through analysis, development, and testing procedures to ensure your processing is efficient, quick, and easy to monitor. Savings can range anywhere from 35k to 300k a year. </p>
                             <ul class="list-inline item-details">
                                 <li>Clients:
                                     <strong><a href="www.isaacmorris.com/">Isaac Morris</a>  <a href="www.academyfurnitureandsupplies.com//">Academy Furniture And Supplies</a>
