--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>"Excellent, prompt, and accomodating service. Did a house call and he eliminated all issues with my network and smart devices promptly.  - S.S."</p>
+                    <p>"Excellent, prompt, and accommodating service. Did a house call and he eliminated all issues with my network and smart devices promptly.  - S.S."</p>
                 </div>
                 <div class="col-lg-4">
                     <p>"I couldn't even get an email out before I called. Anand came and did his magic. Professional, swift, and great customer service. My internet hasn't been down since and my computers are running faster than ever!" -D.D.</p>
@@ -302,10 +302,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Department Automation</h2>
+                            <h2>Computer Automation</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p><a href="mailto:techitoffice@gmail.com">Contact us</a> for a consulatation. Automation has been a trending one-time service in processing and computer laden industries to increase productivity and reduce employee time spent on monotonous, repetitive and simple processing services. We go through analysis, development, and testing procedures to ensure your processing is efficient, quick, and easy to monitor. Savings can range anywhere from 35k to 300k a year. </p>
+                            <p><a href="mailto:techitoffice@gmail.com">Contact us</a> for a consultation. Automation has been a trending one-time service in processing and computer laden industries to increase productivity and reduce employee time spent on monotonous, repetitive and simple processing services. We go through analysis, development, and testing procedures to ensure your processing is efficient, quick, and easy to monitor. Savings can range anywhere from 35k to 300k a year. Automation <a href="http://www.zmescience.com/other/economics/china-factory-robots-03022017/">has reported 250% productivity level increases</a> within organizations. </p>
                             <ul class="list-inline item-details">
                                 <li>Clients:
                                     <strong><a href="www.isaacmorris.com/">Isaac Morris</a>  <a href="www.academyfurnitureandsupplies.com//">Academy Furniture And Supplies</a>
