--- a/index.html
+++ b/index.html
@@ -191,48 +191,46 @@
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
 
                     <form action="https://getsimpleform.com/messages?form_api_token=67f0a04c90bacd6531179946d149e692" method="post">
-                      <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-                      <input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' />
                       <!-- all your input fields here.... -->
-                      <input type='text' name='test' />
-                      <input type='submit' value='Test form' />
-                    </form>
-                    <form name="sentMessage" id="contactForm" novalidate>
-                         <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <!-- <input type='text' name='test' /> -->
+                      <!-- <input type='submit' value='Test form' /> -->
+                    <!-- </form> -->
+                    <!-- <form name="sentMessage" id="contactForm" novalidate> -->
+                         <!-- <div class="row control-group"> -->
+                            <!-- <div class="form-group col-xs-12 floating-label-form-group controls"> -->
                                 <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <input type="text" name='name' class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <!-- <p class="help-block text-danger"></p> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                        <!-- <div class="row control-group"> -->
+                            <!-- <div class="form-group col-xs-12 floating-label-form-group controls"> -->
                                 <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <input type="email" name='email'class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <!-- <p class="help-block text-danger"></p> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                        <!-- <div class="row control-group"> -->
+                            <!-- <div class="form-group col-xs-12 floating-label-form-group controls"> -->
                                 <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <input type="tel" name='phone_number' class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                <!-- <p class="help-block text-danger"></p> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                        <!-- <div class="row control-group"> -->
+                            <!-- <div class="form-group col-xs-12 floating-label-form-group controls"> -->
                                 <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
+                                <textarea rows="5" name='message' class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <!-- <p class="help-block text-danger"></p> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                        <!-- <br> -->
+                        <!-- <div id="success"></div> -->
+                        <!-- <div class="row"> -->
+                            <!-- <div class="form-group col-xs-12"> -->
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
-                        </div>
+                            <!-- </div> -->
+                        <!-- </div> -->
                     </form>
                 </div>
             </div>
