minor stylistic changes

--- a/WIPuns.html
+++ b/WIPuns.html
@@ -27,29 +27,28 @@
     <form action="https://getsimpleform.com/messages?form_api_token=42e4f12338e3a9d957a31fa298211e13" method="post">
         <!-- the redirect_to is optional, the form will redirect to the referrer on submission --><input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' />
         <!-- all your input fields here.... -->
-				<input type='text' name='test' />
+				<!-- <input type='text' name='test' /> -->
     <p align="center" style="margin-bottom: 0in; line-height: 100%">
 			<span style="text-decoration: none">Youtube link :
-				<input type='text' name='test' />
+				<input type='text' name='youtube link' />
 			</span> </p>
     <p align="center" style="margin-bottom: 0in; line-height: 100%">
 			<span style="text-decoration: none">Text:
-				<input type='text' name='test' />
+				<input type='text' name='text' />
 </span>
 		</p>
     <p align="center" style="margin-bottom: 0in; line-height: 100%">
 			<span style="text-decoration: none">Video:
-				<input type='text' name='test' />
+				<input type='text' name='video' />
 
-				<br/>
-audio:
-	<input type='text' name='test' />
+				<br/>Audio:
+	<input type='text' name='audio' />
 </span>
 </p>
     <p align="center" style="margin-bottom: 0in; line-height: 100%">
+			<input type='submit' value='Submit!' /> </form>
 			<br/> </p>
-		<input type='submit' value='Test form' /> </form>
-    <p align="center" style="margin-bottom: 0in; line-height: 100%">Approved submissions</p>
+    <p align="center" href="www.techit.herokuapp.com/WIP/approved.html" style="margin-bottom: 0in; line-height: 100%">Approved submissions</p>
     <p align="center" style="margin-bottom: 0in; line-height: 100%">
 			<br/>
 		</p>
