minor stylistic changes

--- a/WIPuns.html
+++ b/WIPuns.html
@@ -25,7 +25,8 @@
 			<br/>
 		</p>
     <form action="https://getsimpleform.com/messages?form_api_token=42e4f12338e3a9d957a31fa298211e13" method="post">
-        <!-- the redirect_to is optional, the form will redirect to the referrer on submission --><input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' />
+        <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+				<!-- <input type='hidden' /> -->
         <!-- all your input fields here.... -->
 				<!-- <input type='text' name='test' /> -->
     <p align="center" style="margin-bottom: 0in; line-height: 100%">
