--- a/WIPuns.html
+++ b/WIPuns.html
@@ -20,25 +20,23 @@
 </head>
 
 <body lang="en-US" dir="ltr">
-    <p align="center" style="margin-bottom: 0in; line-height: 100%">Submit your coolie pun <span style="text-decoration: none">:</span></p>
-    <p align="center" style="margin-bottom: 0in; line-height: 100%">
+    <div align="center" >
+      <p  style="margin-bottom: 0in; line-height: 100%">Submit your coolie pun <span style="text-decoration: none">:</span></p>
+    <p  style="margin-bottom: 0in; line-height: 100%">
 			<br/>
 		</p>
     <form action="https://getsimpleform.com/messages?form_api_token=42e4f12338e3a9d957a31fa298211e13" method="post">
-        <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-				<!-- <input type='hidden' /> -->
-        <!-- all your input fields here.... -->
 				<!-- <input type='text' name='test' /> -->
-    <p align="center" style="margin-bottom: 0in; line-height: 100%">
+    <p  style="margin-bottom: 0in; line-height: 100%">
 			<span style="text-decoration: none">Youtube link :
 				<input type='text' name='youtube link' />
 			</span> </p>
-    <p align="center" style="margin-bottom: 0in; line-height: 100%">
+    <p  style="margin-bottom: 0in; line-height: 100%">
 			<span style="text-decoration: none">Text:
 				<input type='text' name='text' />
 </span>
 		</p>
-    <p align="center" style="margin-bottom: 0in; line-height: 100%">
+    <p  style="margin-bottom: 0in; line-height: 100%">
 			<span style="text-decoration: none">Video:
 				<input type='text' name='video' />
 
@@ -46,13 +44,17 @@
 	<input type='text' name='audio' />
 </span>
 </p>
-    <p align="center" style="margin-bottom: 0in; line-height: 100%">
+    <p  style="margin-bottom: 0in; line-height: 100%">
 			<input type='submit' value='Submit!' /> </form>
 			<br/> </p>
-    <p align="center" href="www.techit.herokuapp.com/WIP/approved.html" style="margin-bottom: 0in; line-height: 100%">Approved submissions</p>
-    <p align="center" style="margin-bottom: 0in; line-height: 100%">
-			<br/>
+    <p  href="www.techit.herokuapp.com/WIP/approved.html" style="margin-bottom: 0in; line-height: 100%">Approved submissions</p>
+    <p  style="margin-bottom: 0in; line-height: 100%">
+      <br/>They say chedar for blanket
+			<br/> Lime - hang out
+      <br/> Wine- dance move
+      <br/>(scene: a female with an especially fat and jiggly butt passes by a group of men <br/>as one of them exclaims)"Like da gyal mudda cookin buttahflap"
 		</p>
+  </div>
 </body>
 
 </html>
