oh almost forgot submissions

--- a/WIPuns.html
+++ b/WIPuns.html
@@ -40,7 +40,7 @@
 			<span style="text-decoration: none">Video:
 				<input type='text' name='video' />
     </p>
-    <p style="margin-bottom: 0in; line-height: 100%">>
+    <p style="margin-bottom: 0in; line-height: 100%">
 				<br/>Audio:
 	<input type='text' name='audio' />
 </p>
