--- a/WIPuns.html
+++ b/WIPuns.html
@@ -54,7 +54,11 @@
 			<br/> Lime - hang out
       <br/> Wine- dance move
       <br/>(scene: a female with an especially fat and jiggly butt passes by a group of men <br/>as one of them exclaims)"Like da gyal mudda cookin buttahflap"
-		</p>
+      <br/>Bade- skin nasty go bade.. bade farewell to thee
+      <br/> Bade- yuh skin nasty you need to bade...american- bade farewell to my friend
+      <br/>Wata- what a
+
+    </p>
   </div>
 </body>
 
