--- a/WIPuns.html
+++ b/WIPuns.html
@@ -57,7 +57,7 @@
       <br/>Bade- skin nasty go bade.. bade farewell to thee
       <br/> Bade- yuh skin nasty you need to bade...american- bade farewell to my friend
       <br/>Wata- what a
-
+      <br/> (a rum drinker passes a pandit) *Pandit*: Raam Raam. *rum drinker* Rum Rum
     </p>
   </div>
 </body>
