--- a/grow.html
+++ b/grow.html
@@ -25,7 +25,7 @@ ongoing operations, and required maintenance are real costs!</p>
 
 </p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">We
-will be making things you like – aloe, pepper, herbs, and money, 
+will be making things you like – aloe, pepper, herbs, and money,
 </p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">so
 help keep us afloat for a share of the profits!</p>
@@ -49,18 +49,36 @@ total)</font></p>
 for the amount you spend, we’ll give you a great discount</font></p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><font size="2" style="font-size: 10pt">on
 the produce that you cant find anywhere else!</font><br/>
-<br/>
+<br/><form action="https://getsimpleform.com/messages?form_api_token=d497015b6c7df29874fce90f1113a31e" method="post">
+  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+  <input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' />
+  <!-- all your input fields here.... -->
 Name:
+<input type='text' name='prepurchase_name' />
 </p>
-<p align="center" style="margin-bottom: 0in; line-height: 100%">Amount:</p>
+<p align="center" style="margin-bottom: 0in; line-height: 100%">Amount:
+	<input type='text' name='prepurchase_amount' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Value
-of produce you’ll get:</p>
-<p align="center" style="margin-bottom: 0in; line-height: 100%">Savings:</p>
+of produce you’ll get:
+<input type='text' name='prepurchase_value' />
+</p>
+<p align="center" style="margin-bottom: 0in; line-height: 100%">Savings:
+	<input type='text' name='prepurchase_savings' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Phone(so
-we can plan the transaction and delivery):</p>
-<p align="center" style="margin-bottom: 0in; line-height: 100%">Email:</p>
+we can plan the transaction and delivery):
+<input type='text' name='prepurchase_phone' />
+</p>
+<p align="center" style="margin-bottom: 0in; line-height: 100%">Email:
+	<input type='text' name='prepurchase_email' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Address
-(so I know where to deliver):</p>
+(so I know where to deliver):
+<input type='text' name='prepurchase_address' />
+</p>
+<input type='submit' value='Prepurchaser' />
+</form>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
 
 </p>
@@ -80,21 +98,34 @@ you can lock in a discounted price now without any money upfront!</font></p>
 discounts up to 11% do apply!)</font></p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
 
-</p>
+</p><form action="https://getsimpleform.com/messages?form_api_token=d497015b6c7df29874fce90f1113a31e" method="post">
+  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+  <input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' />
+  <!-- all your input fields here.... -->
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Name:
+	<input type='text' name='forward_name' />
 </p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Product
-wanted:</p>
+wanted:<input type='text' name='forward_product_want' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Lbs
-wanted:</p>
+wanted:<input type='text' name='forward_lbs_want' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Price
-pledged:</p>
+pledged:<input type='text' name='forward_price_pledge' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Phone
-(to arrange transaction day):</p>
-<p align="center" style="margin-bottom: 0in; line-height: 100%">Email:</p>
+(to arrange transaction day):<input type='text' name='forward_phonenum' />
+</p>
+<p align="center" style="margin-bottom: 0in; line-height: 100%">Email:
+	<input type='text' name='forward_email' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Address
-(for route planning):</p>
+(for route planning):<input type='text' name='forward_address' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
+	<input type='submit' value='forward_prepurchase' />
+</form>
 
 </p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><font size="4" style="font-size: 15pt">3.
@@ -112,17 +143,27 @@ you pay now to cover some of our expenses for the year,</font></p>
 will return 105% of your investment .</font></p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
 
-</p>
+</p><form action="https://getsimpleform.com/messages?form_api_token=d497015b6c7df29874fce90f1113a31e" method="post">
+  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+  <input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' />
+  <!-- all your input fields here.... -->
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Name:
+	<input type='text' name='Investor_name' />
 </p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Investment
-amount:</p>
+amount:	<input type='text' name='Investor_amount' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Phone
-(to arrange transaction dates):</p>
-<p align="center" style="margin-bottom: 0in; line-height: 100%">Email:</p>
+(to arrange transaction dates):	<input type='text' name='Investor_phone' />
+</p>
+<p align="center" style="margin-bottom: 0in; line-height: 100%">Email:	<input type='text' name='Investor_email' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Address
-(for check delivery):</p>
+(for check delivery):	<input type='text' name='Investor_address' />
+</p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
+	<input type='submit' value='Investor form' />
+</form>
 
 </p>
 </body>
