--- a/grow.html
+++ b/grow.html
@@ -53,7 +53,7 @@ the produce that you cant find anywhere else!</font><br/>
   <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
   <input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' />
   <!-- all your input fields here.... -->
-Name:
+<p align="center" style="margin-bottom: 0in; line-height: 100%">Name:
 <input type='text' name='prepurchase_name' />
 </p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%">Amount:
@@ -77,11 +77,11 @@ we can plan the transaction and delivery):
 (so I know where to deliver):
 <input type='text' name='prepurchase_address' />
 </p>
-<input type='submit' value='Prepurchaser' />
-</form>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
-
+<input type='submit' value='Submit - (only click once)' />
 </p>
+</form>
+
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><font size="4" style="font-size: 15pt">2.
 Pledge to buy some of our stuff for cheap!</font></p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
@@ -124,7 +124,7 @@ pledged:<input type='text' name='forward_price_pledge' />
 (for route planning):<input type='text' name='forward_address' />
 </p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
-	<input type='submit' value='forward_prepurchase' />
+	<input type='submit'  value='Submit - (only click once)'/>
 </form>
 
 </p>
@@ -162,7 +162,7 @@ amount:	<input type='text' name='Investor_amount' />
 (for check delivery):	<input type='text' name='Investor_address' />
 </p>
 <p align="center" style="margin-bottom: 0in; line-height: 100%"><br/>
-	<input type='submit' value='Investor form' />
+	<input type='submit'  value='Submit - (only click once)'/>
 </form>
 
 </p>
